prevent touch-action on ios from double tap zooming on buttons

--- a/app/style.css
+++ b/app/style.css
@@ -1,7 +1,8 @@
-/* Prevent mobile browsers from bouncing / overscrolling on page */
+/* Prevent mobile browsers from bouncing / overscrolling / tap-zooming on page */
 html,body {
     overflow: hidden;
     overscroll-behavior-y: none;
+    touch-action: manipulation;
 }
 
 ul {
